[tool.poetry]
name = "admin-portal"
version = "1.0.0"
description = "Clean admin dashboard for file management and news aggregation"
authors = ["Admin <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Core web framework
flask = "^3.0.0"
flask-cors = "^6.0.0"
flask-wtf = "^1.2.1"
werkzeug = "^3.0.0"
waitress = "^3.0.0"

# HTTP requests and web scraping
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"

# Environment and configuration
python-dotenv = "^1.0.0"

# File handling
pymupdf = "^1.26.0"
docx2txt = "^0.9"
pandas = "^2.2.0"

# News and data aggregation
feedparser = "^6.0.0"
newsapi-python = "^0.2.7"
yfinance = "^0.2.0"
alpha-vantage = "^3.0.0"

# Social media APIs
praw = "^7.8.0"
tweepy = "^4.16.0"

# Real-time features
flask-socketio = "^5.4.0"
schedule = "^1.2.0"

# Google Drive integration (optional)
google-api-python-client = "^2.176.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
google-auth = "^2.40.0"

# Utilities
tqdm = "^4.66.0"
nltk = "^3.9.1"
textblob = "^0.19.0"
wordcloud = "^1.9.4"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"

[tool.poetry.group.dev.dependencies]
# Development dependencies can go here
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:start_server"